# WORKFLOW

./: .gitignore  AAK.II.00.BHZ.obs  Makefile  PAR_FILE  RESP.II.AAK..BHZ  adjust_event_time.obs  adjust_event_time.syn  cut.obs  cut.syn  filter.obs  filter.syn  final.syn  rmean.obs  rmean.syn  test.syn
UTILS/sac-101.6a/: ._CHANGES  ._HISTORY  ._README  ._Readme.buildsac  ._inc  CHANGES  HISTORY  Makefile.am  Makefile.in  README  Readme.buildsac  configure  configure.ac  updates2.patch
UTILS/sac-101.6a/aux/: ._messages  messages
UTILS/sac-101.6a/aux/help/: ._alpha_commands  ._chnhdr  ._contents  ._crr  ._cut  ._cutim  ._external_howto  ._func_commands  ._hlpintro  ._listhdr  ._transfer  ._traveltime  alpha_commands  chnhdr  contents  crr  cut  cutim  evaluate  external_howto  func_commands  hlpintro  listhdr  lowpass  transfer  traveltime
UTILS/sac-101.6a/aux/mat/: MLest.m
UTILS/sac-101.6a/config/: png.m4  xdr.m4  xft.m4  xpm.m4  zlib.m4
UTILS/sac-101.6a/inc/: ._token.h  EVRESPnames.h  amf.h  bbf.h  bbs.h  bom.h  bool.h  bot.h  clf.h  cnd.h  cnv.h  co.h  coda.h  color.h  com.h  comlists.h  config.h.in  contouring.h  cpf.h  cssb.h  datafilelist.h  datetime.h  dbBuildSearchlink.h  dbPtsInside.h  dbh.h  debug.h  dff.h  dfir.h  dfm.h  dload.h  eam.h  errors.h  exm.h  extfunc.h  fir.h  fks.h  gam.h  gcm.h  gd2.h  gd3.aux.h  (+48 more)
UTILS/sac-101.6a/inc/cssListOps/: cssListOps.h  cssStrucs.h  dblGetDataSubs.h  dblPublicDefs.h  dblUserData.h
UTILS/sac-101.6a/inc/dbselect/: dbDefaults.h
UTILS/sac-101.6a/inc/sacIO/: sacIO.h
UTILS/sac-101.6a/inc/smMemory/: smMemory.h
UTILS/sac-101.6a/inc/suds/: suds.h
UTILS/sac-101.6a/libedit/: Makefile.am  Makefile.in
UTILS/sac-101.6a/src/: Makefile.am  Makefile.in
UTILS/sac-101.6a/src/SeisMgr/: smDBdata.c  smDataIO.c  smNoDBstubs.c  smWorkSets.c  stringfun.c
UTILS/sac-101.6a/src/amf/: allamb.c  iniam.c  reaamb.c  relamb.c
UTILS/sac-101.6a/src/bbs/: createbbs.c  deletebbs.c  getbbv.c  inibbs.c  readbbf.c  setbbv.c  unsetbbv.c  writebbf.c
UTILS/sac-101.6a/src/bom/: getbfl.c  inibom.c  relbfl.c  xaddf.c  xboec.c  xbomc.c  xdivf.c  xmerge.c  xmulf.c  xsubf.c
UTILS/sac-101.6a/src/bot/: capf.c  chpf.c  clipdp.c  crname.c  indexa.c  indexb.c  indexc.c  lequal.c  locdp.c  modcase.c  nequal.c  terminate.c  upcase.c  wrlist.c
UTILS/sac-101.6a/src/clf/: fndelcl.c  ldelcl.c  lnumcl.c  lnxtcl.c  nfndcl.c  putcl.c
UTILS/sac-101.6a/src/cnd/: ._xcndc.c  ._xdo.c  getclun.c  getdolen.c  ldolist.c  skipdo.c  skipif.c  xbreak.c  xcndc.c  xdo.c  xelse.c  xelseif.c  xenddo.c  xendif.c  xif.c  xwhile.c
UTILS/sac-101.6a/src/co/: backspace.c  complex.c  ext_init.c  fstrncpy.c  getfline.c  getline.c  izshft.c  math.c  select.c  stdu.h  strscpy.c  subscpy.c  tokenize.c  zauxfile.c  zbasename.c  zclose.c  zclosec.c  zcloses.c  zdest.c  zdestf.c  zexecute.c  zfiles.c  zgetc.c  zgetgd.c  zgimsg.c  zgpmsg.c  zgtmsg.c  zgwindowsize.c  zinquire.c  zload.c  znfile.c  znfiles.c  zopen.c  zopenc.c  zopens.c  zputc.c  zquit.c  zrabs.c  zrun.c  zrunname.c  (+4 more)
UTILS/sac-101.6a/src/coda/: binary_op.c  calc_coda_amplitudes.c  calc_energy.c  calc_envelopes.c  calc_moment_magnitude.c  fit_coda_amp.c  fit_coda_params.c  get_input.c  pickwindows.c  plotspec.c  send_output.c  unary_op.c  xcoda.c
UTILS/sac-101.6a/src/contouring/: alloclabels.c  allocpoints.c  allocsegments.c  calccontlab1.c  calccontlab4.c  calccontlabs.c  calccontrlink.c  calccontsegs.c  calccontticks.c  calclastpoint.c  calcsegangle.c  fastcontdata.c  getcontlabel.c  getcontpoint.c  getcontrlink.c  getcontseg.c  getcontseglab.c  initcontattr.c  linkcontsegs.c  listcontsegs.c  markcontlabel.c  mergecontsegs.c  newcontlabel.c  newcontpoint.c  newcontseg.c  nextcontseg.c  plotcontdata.c  plotcontsegs.c  pointsequal.c  putcontlabel.c  putcontpoint.c  putcontrlink.c  putcontseg.c  putcontseglab.c  releaselabels.c  releasepoints.c  releasesegmen.c  setcontdatali.c
UTILS/sac-101.6a/src/cpf/: ._lcchar.c  cerr.c  cfmt.c  cresp.c  inicom.c  initcomlists.c  lcchar.c  lccl.c  lcdfl.c  lcia.c  lcidi.c  lcint.c  lcirc.c  lcircp.c  lckey.c  lckeyExact.c  lclist.c  lclog.c  lclog2.c  lcmore.c  lcquot.c  lcra.c  lcreal.c  lcrest.c  lcrrcp.c  lcrtw.c  lkchar.c  lkcharExact.c  lkentries.c  lkia.c  lkint.c  lkirc.c  lklist.c  lklog.c  lklog2.c  lklogc.c  lklogi.c  lklogr.c  lklogra.c  lkquot.c  (+13 more)
UTILS/sac-101.6a/src/datafilelist/: nextinputfile.c  selectinputfi.c  setinputmode.c
UTILS/sac-101.6a/src/dbh/: afr.c  alias.c  append.c  apply.c  autcor.c  beroots.c  bilin2.c  buroots.c  c1roots.c  c2roots.c  chebparm.c  cpolar.c  crit.c  crscor.c  cutoffs.c  design.c  dfr.c  dircor.c  edecim.c  fft.c  firtrn.c  gauss.c  getResponse.c  iirfilter.c  inspect.c  levin.c  levinD.c  linpack.c  lp.c  lptbp.c  lptbr.c  lpthp.c  mem.c  mlm.c  overlp.c  pds.c  pef.c  phaseshift.c  pltplr.c  random.c  (+12 more)
UTILS/sac-101.6a/src/dff/: f2c.c  formhv.c  formmarker.c  getfhv.c  getfil.c  gethv.c  getihv.c  getkhv.c  getlhv.c  getnfiles.c  getnhv.c  hdrfld.c  inihdr.c  inilhf.c  lgahdr.c  map_chdr_in.c  map_chdr_out.c  map_hdr_in.c  map_hdr_out.c  markhdr.c  newhdr.c  putfil.c  rddta.c  rdhdr.c  rdsac.c  rdsdta.c  rdsegy.c  rdshdr.c  rdxdrdta.c  rsac1.c  rsac2.c  rsach.c  setfhv.c  setihv.c  setkhv.c  setlhv.c  setnfiles.c  setnhv.c  setrng.c  updhdr.c  (+9 more)
UTILS/sac-101.6a/src/dfm/: cleardfl.c  cnvfmt.c  cnvfre.c  crsac.c  cut.c  decont.c  defcut.c  defmem.c  detnum.c  gennames.c  getatw.c  getprefs.c  getwfdiscs.c  inidfm.c  iztypeMessage.c  lfilesok.c  makeuniq.c  rdci.c  readcfl.c  readfl.c  readgse.c  readsuds.c  sort.c  synch.c  updatedfl.c  vblist.c  vfeven.c  vflist.c  vfmax.c  vfmaxn.c  vfrng.c  vfspec.c  vftime.c  wrci.c  xch.c  (+27 more)
UTILS/sac-101.6a/t/: ._testsuite  Makefile.am  Makefile.in  pytest.py  pytest.sh  sacio.c  sacio_f.f  sacio_fortran.sh  sacio_getset.c  sacio_rsac1.c  sacio_rsac2.c  sacio_test.h  sacio_wsac0.c  sacio_wsac1.c  sacio_wsac2.c  sacio_wsac3.c  saclib_f.f  ucf.c  ucf_cnvatf.c  ucf_cnvati.c  ucf_cnvfta.c  ucf_cnvita.c  ucf_inctim.c  unit.c  unit.h  use_sac.c  vars.c
UTILS/sac-101.6a/utils/: Makefile.am  Makefile.in
(+1403 files in other folders)
